<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="5dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

    <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_type"/>

    <Spinner
            android:id="@+id/data_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"/>

    <EditText
            android:id="@+id/edit_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/number_input_layout">

        <Button
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_0" />
        <Button
                android:text="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_1" />

        <Button
                android:text="100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_100" />

    </LinearLayout>
</LinearLayout>